# pizzaro-firmware

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
common/: Cargo.toml  README.md
common/src/: cap_displacement_processor.rs  executor.rs  lib.rs  rp2040_timer.rs
generic/: Cargo.toml
generic/src/: atomi_error.rs  atomi_proto.rs  command_to_proto.rs  lib.rs  mmd_status.rs
integration/: Cargo.toml  run_all_tests.py  run_smoke_test.py
integration/examples/: blinky.rs  demo_linear_actuator_async.rs  demo_linear_scale_and_motor.rs  demo_linear_scale_pio.rs  demo_mmd_br_motor_patched.rs  demo_mmd_pwm_motor.rs  demo_mmd_pwm_stepper.rs  hello_world.rs  hpd_home.rs  mmd_home.rs  simple_pwm.rs  spawn_sub_task.rs  tmc_2226_quick_test.rs  tmc_5160_quick_test.rs
integration/src/: hpd_process.rs  hpd_processor.rs  lib.rs  mmd_processor.rs  mock_stepper.rs  pid.rs  uart_comm.rs
integration/src/mmd/: linear_stepper.rs  stepper.rs
pizzaro/: Cargo.toml
pizzaro/src/: hpd_processor.rs  lib.rs  message_queue.rs  mmd_processor.rs
pizzaro/src/bsp/: board.rs  board_asd.rs  board_dtu_release_sb.rs  board_early_release.rs  board_helper.rs  board_hpd_release_sb.rs  board_mc_release_sb.rs  board_mmd_release_sb.rs  board_shared_release_sb.rs  board_v1_5_4.rs  config.rs  mod.rs
pizzaro/src/common/: brush_motor.rs  brush_motor_patch.rs  brushless_motor.rs  can.rs  can_messenger.rs  consts.rs  executor.rs  global_allocator.rs  global_status.rs  global_timer.rs  led_controller.rs  message_queue.rs  mod.rs  once.rs  pid.rs  pwm_stepper.rs  rp2040_timer.rs  state.rs  stepper_driver.rs  stepper_driver_processor.rs  uart.rs  uart_comm.rs  weight_sensor.rs  ws2812_bitbang.rs
pizzaro/src/common/stepper/: classic_stepper.rs  classic_stepper_processor.rs  mod.rs
pizzaro/src/common/tmc2209/: mod.rs  reg.rs
pizzaro/src/common/tmc5160/: mod.rs  reg.rs
pizzaro/src/dtu/: dtu_linear_stepper.rs  dtu_linear_stepper_processor.rs  mod.rs  tmc_driver.rs  tmc_stepper.rs  tmc_stepper_processor.rs  tmc_stepper_sensorless.rs
pizzaro/src/hpd/: hpd_misc.rs  hpd_processor.rs  linear_bull_processor.rs  linear_scale.rs  mod.rs  pid.rs  quadrature_encoder.pio  stationary_detector.rs
pizzaro/src/mc/: mod.rs  system_executor.rs  touch_screen.rs  touch_screen_process.rs
pizzaro/src/mmd/: brush_motor.rs  brush_motor_processor.rs  brushless_motor.rs  brushless_motor_processor.rs  linear_stepper.rs  linear_stepper_processor.rs  mmd_dispatcher.rs  mmd_processor.rs  mod.rs  pwm_motor.rs  pwm_stepper.rs  rotation_stepper_processor.rs  stepper.rs  stepper_processor.rs
script/: calc.py  console.sh  run_asd.sh  run_dtu.sh  run_hpd.sh  run_mc.sh  run_mmd.sh  run_pc_controller.sh  run_rs485_gateway.sh  test_mmd.sh
unittest/: Cargo.toml
unittest/examples/: blinky.rs  gpioscan.rs  hpd_unittest_485.rs  mc_unittest_485.rs  mmd_unit_limit.rs  mmd_unittest_485.rs  mmd_unittest_brushless_motor.rs  mmd_unittest_brushmotor.rs  mmd_unittest_limit_switch.rs  mmd_unittest_stepper.rs
x86_app/: Cargo.toml
x86_app/pc_controller/: Cargo.toml
x86_app/pc_controller/examples/: ping_test.rs
x86_app/pc_controller/src/: lib.rs
x86_app/pyport/: Cargo.toml  README.md  pyproject.toml
x86_app/pyport/common/: async_serial.py  errors.py
x86_app/pyport/controller/: __main__.py
x86_app/pyport/executor/: __main__.py  lib.py
x86_app/pyport/src/: lib.rs
x86_app/pyport/tests/: test_async_serial.py
