[workspace]
members = [
    "generic",
    "integration",
    "pizzaro",
    "unittest",
]
resolver = "2"

# 共享构建配置
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
#lto = 'fat'
lto = true
opt-level = 3
#opt-level = 's'
overflow-checks = false
