[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
generic = { path = "../generic" }
defmt = "0.3"
critical-section = "1.1"
rp2040-hal = "0.9"
cortex-m = "0.7"
fugit = "0.3.7"
alloc-cortex-m = "0.4"
nb = "1.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# experimental
embedded-hal = "0.2"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
heapless = "0.8"

[dev-dependencies]

[features]
