[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
generic = { version = "0.1", path = "../generic" }
pizzaro = { version = "0.1", path = "../pizzaro" }

cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
nb = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard = { version = "1.0", features = ["alloc"] }
rp2040-hal = "0.10"
rp-pico = "0.9"
#ws2812-pio = "0.8"

# experimental
serde = { version = "1.0", default-features = false, features = ["alloc"] }
usb-device = "0.3"
usbd-serial = "0.2"
heapless = "0.8"

[dev-dependencies]

[features]
