[package]
name = "pizzaro"
version = "0.1.0"
edition = "2021"

[dependencies]
generic = { version = "0.1", path = "../generic" }

alloc-cortex-m = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "0.2"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
heapless = "0.8"
nb = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard = { version = "1.0", features = ["alloc"] }
rp2040-hal = "0.9"
rp-pico = "0.8"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
usb-device = "0.2"
usbd-serial = "0.1"
smart-leds = "0.4.0"
smart-leds-trait = "0.2.1"
ws2812-pio = "0.7.0"
bitfield = "0.14.0"

pio-proc = "0.2"
pio = "0.2"

[dev-dependencies]

[features]
