[package]
name = "pizzaro"
version = "0.1.0"
edition = "2021"

[dependencies]
generic = { version = "0.1", path = "../generic" }

alloc-cortex-m = "0.4"
bitfield = "0.14.0"
can2040 = "0.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = {version = "0.3"}
defmt-rtt = "0.4"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
embedded-can = "0.4"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
heapless = "0.8"
nb = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2"
pio-proc = "0.2"
postcard = { version = "1.0", features = ["alloc"] }
rp2040-hal = "0.10"
rp-pico = "0.9"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
usb-device = "0.3"
usbd-serial = "0.2"
smart-leds = "0.4.0"
smart-leds-trait = "0.2.1"
ws2812-pio = "0.8"

[dev-dependencies]

[features]
default = ["bsp_early_release"]
bsp_early_release=[]
bsp_v1_5_4=[]
